# mery

./: CMakeLists.txt  main1.c  main_wyznaczniki.c
