cmake_minimum_required(VERSION 3.17)
project(prog_lion_1 C)

set(CMAKE_C_STANDARD 99)

add_executable(prog_lion_1 main.c main2.c main11.c main.tg.c)
add_executable(prog_lion_2 main1.c)
add_executable(prog_lion_3 main2.c)
add_executable(prog_lion_4 main3.c)
add_executable(prog_lion_5 main4.c)
add_executable(prog_lion_6 main5.c)
add_executable(prog_lion_7 main6.c)
add_executable(prog_lion_8 main7.c)
add_executable(prog_lion_10 main9.c)
add_executable(prog_lion_11 Grupa.c)
add_executable(prog_lion_12 main10.c)
add_executable(prog_lion_13 main11.c)
add_executable(prog_lion_14 mainkurs1.c)
add_executable(prog_lion_15 mainlekcja4.c)
add_executable(prog_lion_16 main_grupa5.c)
add_executable(prog_lion_17 main_wyznaczniki.c)
add_executable(prog_lion_18 main.tg.c)
add_executable(prog_lion_19 main.kolokwium.c)
add_executable(prog_lion_20 main.kolokwium1.c)
add_executable(prog_lion_21 kolokwium_zadanie2.c)
